package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:push.bzl", "container_push")
load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@package_bundle//file:packages.bzl", "packages")

container_image(
    name = "latest",
    repository = "cescoffier/native-base",
    base = "@distroless_base//image",
    debs = [        
        packages["zlib1g"]
    ]    
)